--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -149,7 +149,7 @@
       {
         "lat": <%= @restaurant.location_latitude %>,
         "lng": <%= @restaurant.location_longitude %>,
-        "infowindow": "<h5><%= @restaurant.created_at %></h5><small><%= @restaurant.location_formatted_address %></small>"
+        "infowindow": "<h5><%= @restaurant.name %></h5><small><%= @restaurant.location_formatted_address %></small>"
       }
     ]);
     handler.bounds.extendWith(markers);
